# optimization_BP_cpp_7sem

./: CMakeLists.txt  Function.cpp  Function.h  area.cpp  area.h  gradientDescent.cpp  gradientDescent.h  main.cpp  optimizationMethod.cpp  optimizationMethod.h  randomSearch.cpp  randomSearch.h  stopCrit.cpp  stopCrit.h
